# ReFx-Remote

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: admin-suite-plan.md  api-surface.md  code-signing.md  decisions.md  features.md  ipc-contract.md  roadmap.md  todo-frank.md  versions.md
docs/recon/: README.md  android-client.md  deployment-status.md  ecosystem-sweep.md  gaps-and-risks.md  ios-client.md  panel-api.md  parity-cross-check.md  realtime-protocol.md
scripts/: release.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: console_live_check.rs  live_check.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands_admin.rs  deeplink.rs  lib.rs  logging.rs  main.rs  monitor.rs  settings.rs  state.rs  support_watch.rs  toast.rs  tray.rs  vault.rs
src-tauri/src/console/: mod.rs  protocol.rs  session.rs
src-tauri/src/panel/: account.rs  auth.rs  backups.rs  client.rs  databases.rs  error.rs  files.rs  mod.rs  models.rs  notifications.rs  perms.rs  schedules.rs  servers.rs  startup.rs  webauthn_win.rs
src-tauri/src/panel/admin/: billing.rs  catalog.rs  content.rs  dbhosts.rs  mod.rs  nodes.rs  platform.rs  products.rs  roles.rs  servers.rs  settings.rs  support.rs  team.rs  templates.rs  users.rs
src-tauri/src/sftp/: mod.rs
src-tauri/tests/: panel.rs
src/components/: Backups.tsx  CommandPalette.tsx  Console.tsx  Databases.tsx  Dialog.tsx  FileEditor.tsx  Files.tsx  Logo.tsx  PowerControls.tsx  Schedules.tsx  ServerDetailPanel.tsx  Settings.tsx  Startup.tsx  TwoFactorSetup.tsx  TypedConfirm.tsx  UpdateBanner.tsx
src/components/admin/: AdminApp.tsx  AdminAudit.tsx  AdminBilling.tsx  AdminCommerce.tsx  AdminContent.tsx  AdminDashboard.tsx  AdminDbHosts.tsx  AdminNodes.tsx  AdminProducts.tsx  AdminServerDrawer.tsx  AdminServers.tsx  AdminSettings.tsx  AdminSupport.tsx  AdminTeam.tsx  AdminUserDrawer.tsx  AdminUsers.tsx  Roles.tsx
src/lib/: format.ts  ipc.ts  perms.ts  updater.ts
src/screens/: ForcePasswordChange.tsx  Home.tsx  Reconnecting.tsx  Servers.tsx  SignIn.tsx
src/store/: auth.ts  nav.ts  servers.ts
