[package]
name = "refx-desktop"
version = "0.1.10"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "refx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2.4.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
keyring = "4.1.4"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "json", "gzip"] }
regex = "1.13.0"
tracing-log = "0.2.0"
urlencoding = "2.1.3"
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std", "sink"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
base64 = "0.22"
# Native passkey (WebAuthn) assertion via webauthn.dll + COM init for toasts.
# The `windows` crate is already in the tree transitively (Tauri) — this just
# enables the WebAuthn, window-handle, and COM bindings. No OpenSSL, unlike
# webauthn-authenticator-rs.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Networking_WindowsWebServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
] }
# Direct WinRT toast so we control the COM apartment (tauri-plugin-notification
# fires the real call on a tokio worker with no apartment and swallows the
# error). Already in the tree transitively via the plugin.
tauri-winrt-notification = "0.7"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
wiremock = "0.6.5"

